--- a/E01_invertirCadena.html
+++ b/E01_invertirCadena.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<h1> E01 AJAX </h1>
+	<h1> E01 AJAX i PHP</h1>
 	<input type="text" name="cadena" id="cadena" value="" /><br />
 	<label id="cadenaInvertida"></label>
 </body>
